--- a/_config.yml
+++ b/_config.yml
@@ -3,42 +3,30 @@ menu:
   Home: /
   Projects: /projects/
   Blog: /archives/ # can set archive-dir in root config to custom value
-  Contact: /contact/
+  # Contact: /contact/
   About: /about/
    
-rss: /atom.xml
+# rss: /atom.xml
 
 # Content
 excerpt_link: Read More
 fancybox: true # whether or not to load the fancybox library
 
 # Integrations
-disqus_shortname: 
-google_analytics:
+disqus_shortname: tangram7
+google_analytics: UA-88107707-1
 swiftype_install_key: 
 
 # Social
 social:
-  github: https://github.com/ptsteadman
-  twitter: https://twitter.com/ptsteadman
-  facebook: https://www.facebook.com/ptsteadman
-  rss: atom.xml
-  linkedin: https://linkedin.com/in/ptsteadman
-  stackoverflow: http://stackoverflow.com/users/2480493/patrick-steadman
+  github: https://github.com/xiongyihui
 
 # Miscellaneous
-color_scheme: red   # options: blue, gray, green, orange, red, turquoise
+color_scheme: green   # options: blue, gray, green, orange, red, turquoise
 favicon: /favicon.ico # path from root of hexo site
-twitter_widget_id: "678830341331820544" # as a string, from https://twitter.com/settings/widgets
-twitter_username: computerlab_ # twitter username without the @
-default_author: Anonymous
+# twitter_widget_id: "" # as a string, from https://twitter.com/settings/widgets
+# twitter_username: YihuiXiong # twitter username without the @
+default_author: "Yihui Xiong"
 
-about: Computer Lab is a software development and marketing company based in Brooklyn, New York. <br><br> Computer Lab was founded in 2015, and is focused on so on and so forth.
-phone: 716-472-4484
-email: ptsteadman@gmail.com
-address_1: 140 Metropolitan Avenue
-address_2: 5th Floor
-address_3: Brooklyn, NY 11249
-skype: ptsteadman
-lat: 40.715911 
-long: -73.962147
+about: To create, to have fun.
+
